# shellexecute

./: README.md  pyproject.toml  setup.py
src/execute/: __init__.py
src/shellexecute/: __init__.py
tests/: accept.py  test_execute.py
